--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,6 +21,10 @@ jobs:
         uses: actions/checkout@v4
         with:
           lfs: true
+      - name: Setup Git LFS
+        run: |
+          git lfs install
+          git lfs pull
       - name: Install, build, and upload your site
         uses: withastro/action@v2
         # with:
